--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+.idea
+
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
